--- a/languages/sharanahua.html
+++ b/languages/sharanahua.html
@@ -21,8 +21,8 @@
             <button onclick="window.location.href='../home.html#carousel'" aria-label="Back to All Languages">Back To All Languages</button>
         </div>
         
-        <div class="language-title">Sharanahua</div>
-        <div style="font-size:1rem" class="language-text1">
+        <div  class="language-title">Sharanahua</div>
+        <div class="language-text1">
            Yaminahua: The Yaminahua language is spoken by the Yaminahua people, who primarily inhabit the Amazon rainforest regions of Brazil and Peru. It belongs to the Panoan language family, like Sharanahua, and is known for its complex grammatical structure and rich oral tradition. Like many indigenous languages, Yaminahua is endangered due to factors such as cultural assimilation and limited intergenerational transmission. 
           
             Nahua: Nahua is a language spoken by the Nahua peoples, who are indigenous to Mexico and parts of Central America. It belongs to the Uto-Aztecan language family and is notable for its historical significance, as it was the language of the Aztec Empire and continues to be spoken by various Nahua communities today. Nahua languages are characterized by their intricate symbolism, particularly in artistic and religious contexts. 
