changing the text

--- a/languages/masep.html
+++ b/languages/masep.html
@@ -18,7 +18,7 @@
 <body>
     <div id="aboutLanguage" class="page">
         <div class="button-backToAllLanguages">
-            <button onclick="window.location.href='../home.html#carousel'" aria-label="Back to All Languages">Back To All Languages</button>
+            <button onclick="window.location.href='../home#carousel.html' " aria-label="Back to All Languages">Back To All Languages</button>
         </div>
         
         <div class="language-title">Masep</div>
