--- a/languages/koryak.html
+++ b/languages/koryak.html
@@ -10,15 +10,13 @@
     <title>Document</title>
     <link rel="stylesheet" href="language.css">
     <style>
-
-
     </style>
 </head>
 
 <body>
     <div id="aboutLanguage" class="page">
         <div class="button-backToAllLanguages">
-            <button onclick="window.location.href='../home.html#carousel'" aria-label="Back to All Languages">Back To All Languages</button>
+            <button onclick="window.location.href='../home#carousel.html' "aria-label="Back to All Languages">Back To All Languages</button>
         </div>
         
         <div class="language-title">Koryak</div>
