--- a/languages/forestenets.html
+++ b/languages/forestenets.html
@@ -37,7 +37,7 @@
                     <div class="audio-section">
                         <h2 class="section-title">Listen to Full Audio</h2>
                         <audio class="audio-player" controls>
-                            <source src="/audio/forestenets.mp3" type="audio/mpeg">
+                            <source src="https://github.com/shaanrxx/GradWebsite/blob/main/audio/golpa.mp4" type="audio/mpeg">
                             Your browser does not support the audio element.
                         </audio>
                     </div>
