test to see if audio works

--- a/languages/golpa.html
+++ b/languages/golpa.html
@@ -29,7 +29,7 @@
                 <div class="audio-section">
                     <h2 class="section-title">Listen to Full Audio</h2>
                     <audio class="audio-player" controls>
-                        <source src="/audio/golpa.mp4" type="audio/mpeg">
+                        <source src="../audio/golpa.mp4" type="audio/mpeg">
                         Your browser does not support the audio element.
                     </audio>
                 </div>
