--- a/languages/kwakhala.html
+++ b/languages/kwakhala.html
@@ -36,7 +36,7 @@ However, like many Indigenous languages, Kwak'wala faces the threat of endangerm
             <div class="audio-section">
                 <h2 class="section-title">Listen to Full Audio</h2>
                 <audio class="audio-player" controls>
-                    <source src="/audio/kwakhala.mp4" type="audio/mpeg">
+                    <source src="../audio/kwakhala.mp4" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
             </div>
