--- a/languages/arapaho.html
+++ b/languages/arapaho.html
@@ -34,7 +34,7 @@
                 <div class="audio-section">
                     <h2 class="section-title">Listen to Full Audio</h2>
                     <audio class="audio-player" controls>
-                        <source src="/audio/forestenets.mp3" type="audio/mpeg">
+                        <source src="../audio/forestenets.mp3" type="audio/mpeg">
                         Your browser does not support the audio element.
                     </audio>
                 </div>
