--- a/languages/forestenets.html
+++ b/languages/forestenets.html
@@ -18,7 +18,7 @@
 <body>
 
         <div class="button-backToAllLanguages">
-            <button onclick="window.location.href='../home#carousel.html' " aria-label="Back to All Languages">Back To All Languages</button>
+            <button onclick="window.location.href='../home.html#carousel' " aria-label="Back to All Languages">Back To All Languages</button>
 
         </div>
           
@@ -37,7 +37,7 @@
                     <div class="audio-section">
                         <h2 class="section-title">Listen to Full Audio</h2>
                         <audio class="audio-player" controls>
-                            <source src="https://github.com/shaanrxx/GradWebsite/blob/main/audio/golpa.mp4" type="audio/mpeg">
+                            <source src="../audio/golpa.mp4" type="audio/mpeg">
                             Your browser does not support the audio element.
                         </audio>
                     </div>
