--- a/languages/masep.html
+++ b/languages/masep.html
@@ -33,7 +33,7 @@
             <div class="audio-section">
                 <h2 class="section-title">Listen to Full Audio</h2>
                 <audio class="audio-player" controls>
-                    <source src="/audio/masep.mp3" type="audio/mpeg">
+                    <source src="../audio/masep.mp3" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
             </div>
