--- a/languages/sharanahua.html
+++ b/languages/sharanahua.html
@@ -35,7 +35,7 @@
             <div class="audio-section">
                 <h2 class="section-title">Listen to Full Audio</h2>
                 <audio class="audio-player" controls>
-                    <source src="/audio/sharanahua.mp4" type="audio/mpeg">
+                    <source src="../audio/sharanahua.mp4" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
             </div>
