--- a/languages/ubang.html
+++ b/languages/ubang.html
@@ -31,7 +31,7 @@
             <div class="audio-section">
                 <h2 class="section-title">Listen to Full Audio</h2>
                 <audio class="audio-player" controls>
-                    <source src="/audio/ubang.mp4" type="audio/mpeg">
+                    <source src="../audio/ubang.mp4" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
             </div>
