--- a/languages/golpa.html
+++ b/languages/golpa.html
@@ -14,7 +14,7 @@
 <body>
     <div class="button-backToAllLanguages">
     
-            <button onclick="window.location.href='../home#carousel.html' " aria-label="Back to All Languages">Back To All Languages</button>
+            <button onclick="window.location.href='../home.html#carousel' " aria-label="Back to All Languages">Back To All Languages</button>
     </div>
      <div id="aboutLanguage">
         <h1 class="language-title">Golpa</h1>
