--- a/languages/koryak.html
+++ b/languages/koryak.html
@@ -14,6 +14,9 @@
 </head>
 
 <body>
+    <div class="button-backToAllLanguages">
+        <button onclick="window.location.href='../home.html#carousel'" aria-label="Back to All Languages">Back To All Languages</button>
+    </div>
 
 
     <div id="aboutLanguage">
