adding left and right keys for website

--- a/home.html
+++ b/home.html
@@ -39,8 +39,24 @@
         <div class="carousel-title">THE LANGUAGES</div>
         <!-- Button to navigate back to the About section -->
         <div class="button-backToAbout"><button onclick="scrollToAbout()" aria-label="Back to About Section">BACK TO ABOUT</button></div>
-        <div class="carousel-text">Drag to browse languages and click on one to find out more!</div>
-        
+        <!-----------------insrructions/how to navigate---------------------------->
+
+        <div class="carousel-text">
+            <div class="carousel-line">
+                Swipe left and right to browse languages if you're on mobile or tablet 
+                <i class="fas fa-mobile-alt"></i>
+                <i class="fa-solid fa-tablet-screen-button"></i>
+            </div>
+            <div class="carousel-line">
+                If you're on laptop or desktop, use left and right arrow keys (← →)
+                <i class="fas fa-desktop"></i>
+                <i class="fa-solid fa-laptop"></i>
+            </div>
+            <div class="carousel-line">
+                Click on a language to find out more!
+            </div>
+        </div>
+
         <!-- Carousel item for Golpa language -->
         <a href="languages/golpa.html">
             <div class="carousel-item">
